turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value Colors
  if (getCouleurSol()==Colors(i))
                       ^LangtonsAnt:8: error: not found: value i
  if (getCouleurSol()==Colors(i))
                              ^LangtonsAnt:10: error: not found: value Colors
    setCouleurBrosse(Colors((i+1)%colors.length))
                     ^LangtonsAnt:10: error: not found: value i
    setCouleurBrosse(Colors((i+1)%colors.length))
                             ^